# CustomEventSystem

./: CMakeLists.txt  README.md  main.cpp
src/commandline/: commandline_args.cpp  commandline_args.h
src/common/: event_dispatcher.cpp  event_dispatcher.h  iprocessor.cpp  iprocessor.h
src/defog/: defogger.cpp  defogger.h
src/detection/: inference_engine.cpp  inference_engine.h
src/gui/: gui_renderer.cpp  gui_renderer.h
src/video/: video_processor.cpp  video_processor.h
